Fixed bug #50558 (Broken object model when extending tidy)